[gd_scene load_steps=23 format=3 uid="uid://bfxobxgjslkad"]

[ext_resource type="Script" path="res://Scenes/Room.gd" id="1_tuqrp"]
[ext_resource type="Texture2D" uid="uid://c1w8bc2xoegcd" path="res://Assets/Background/game-room.png" id="1_vf8nt"]
[ext_resource type="Texture2D" uid="uid://c3hhkqwbnpi1w" path="res://Assets/Actors/capy.png" id="3_6ggd5"]
[ext_resource type="Texture2D" uid="uid://jiqa2qo55kci" path="res://Assets/Objects/mini-clock.png" id="4_h7paj"]
[ext_resource type="PackedScene" path="res://Scenes/Menu/bottom_bar.tscn" id="5_5juu3"]
[ext_resource type="PackedScene" uid="uid://civfbllcl8qj0" path="res://Scenes/Actors/client_1.tscn" id="6_5vcl1"]
[ext_resource type="PackedScene" uid="uid://0ii4xyxn7abk" path="res://Scenes/Actors/client_2.tscn" id="7_r2n8i"]
[ext_resource type="PackedScene" uid="uid://bvphp13jbnria" path="res://Scenes/Actors/client.tscn" id="8_oapka"]

[sub_resource type="Animation" id="Animation_uasj7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lxl3d"]
resource_name = "left_to_middle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-75, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_m2rd6"]
resource_name = "left_to_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-75, 0), Vector2(0, 0), Vector2(100, 0)]
}

[sub_resource type="Animation" id="Animation_1pedm"]
resource_name = "middle_to_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-75, 0)]
}

[sub_resource type="Animation" id="Animation_lirgr"]
resource_name = "middle_to_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(100, 0)]
}

[sub_resource type="Animation" id="Animation_ltk21"]
resource_name = "right_to_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(100, 0), Vector2(0, 0), Vector2(-75, 0)]
}

[sub_resource type="Animation" id="Animation_8br3e"]
resource_name = "right_to_middle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(100, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpv2o"]
_data = {
"RESET": SubResource("Animation_uasj7"),
"left_to_middle": SubResource("Animation_lxl3d"),
"left_to_right": SubResource("Animation_m2rd6"),
"middle_to_left": SubResource("Animation_1pedm"),
"middle_to_right": SubResource("Animation_lirgr"),
"right_to_left": SubResource("Animation_ltk21"),
"right_to_middle": SubResource("Animation_8br3e")
}

[sub_resource type="Animation" id="Animation_o5n0t"]
resource_name = "leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MiddleMiniClock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.847, -36.212), Vector2(2.054, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddleMiniClock:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(164, 16), Vector2(164, 91)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m2kt0"]
_data = {
"leave": SubResource("Animation_o5n0t")
}

[sub_resource type="Animation" id="Animation_4vlvb"]
resource_name = "leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightMiniClock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5.9153, -35.6512), Vector2(4.63235, 4.42058)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightMiniClock:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(274, 15), Vector2(274, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwjaw"]
_data = {
"leave": SubResource("Animation_4vlvb")
}

[sub_resource type="Animation" id="Animation_q6s5j"]
resource_name = "leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(69, 16), Vector2(69, 91)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftMiniClock:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10.111, -35.253), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LeftMiniClock:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bg87"]
_data = {
"leave": SubResource("Animation_q6s5j")
}

[node name="Room" type="Node2D"]
script = ExtResource("1_tuqrp")

[node name="Game-room" type="Sprite2D" parent="."]
position = Vector2(160, 120)
texture = ExtResource("1_vf8nt")

[node name="Capy" type="Sprite2D" parent="."]
position = Vector2(158, 115)
texture = ExtResource("3_6ggd5")

[node name="CapyAnimationPlayer" type="AnimationPlayer" parent="Capy"]
libraries = {
"": SubResource("AnimationLibrary_bpv2o")
}

[node name="LeftTable" type="Area2D" parent="."]
position = Vector2(77, 141)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftTable"]
polygon = PackedVector2Array(-11, -11, 23, -11, 12, 21, 12, 28, -24, 28, -24, 15)

[node name="MiddleTable" type="Area2D" parent="."]
position = Vector2(164, 145)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MiddleTable"]
polygon = PackedVector2Array(-23, -14, 22, -14, 25, 15, 26, 22, -28, 23, -27, 15)

[node name="RightTable" type="Area2D" parent="."]
position = Vector2(264, 145)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightTable"]
polygon = PackedVector2Array(-25, -15, 12, -15, 31, 15, 32, 22, -15, 22, -13, 12)

[node name="BottomBar" parent="." instance=ExtResource("5_5juu3")]

[node name="Clients" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 165.0
offset_right = 319.0
offset_bottom = 202.0

[node name="MiddleClient" parent="Clients" instance=ExtResource("6_5vcl1")]
position = Vector2(164, 16)
rotation = -0.0872665

[node name="MiddleMiniClock" type="Sprite2D" parent="Clients/MiddleClient"]
z_index = 1
z_as_relative = false
position = Vector2(-0.847, -36.212)
rotation = 0.0872665
texture = ExtResource("4_h7paj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Clients/MiddleClient"]
libraries = {
"": SubResource("AnimationLibrary_m2kt0")
}

[node name="RightClient" parent="Clients" instance=ExtResource("7_r2n8i")]
position = Vector2(274, 15)
rotation = -0.0872665

[node name="RightMiniClock" type="Sprite2D" parent="Clients/RightClient"]
position = Vector2(-5.9153, -35.6512)
rotation = 0.0872665
texture = ExtResource("4_h7paj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Clients/RightClient"]
libraries = {
"": SubResource("AnimationLibrary_dwjaw")
}

[node name="LeftClient" parent="Clients" instance=ExtResource("8_oapka")]
position = Vector2(69, 16)
rotation = -0.0872665

[node name="LeftMiniClock" type="Sprite2D" parent="Clients/LeftClient"]
position = Vector2(10.111, -35.253)
rotation = 0.0872665
texture = ExtResource("4_h7paj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Clients/LeftClient"]
libraries = {
"": SubResource("AnimationLibrary_5bg87")
}

[connection signal="animation_finished" from="Capy/CapyAnimationPlayer" to="." method="_on_capy_animation_player_animation_finished"]
[connection signal="input_event" from="LeftTable" to="." method="_on_table_input_event" binds= ["left"]]
[connection signal="mouse_entered" from="LeftTable" to="." method="_on_table_mouse_entered"]
[connection signal="mouse_exited" from="LeftTable" to="." method="_on_table_mouse_exited"]
[connection signal="input_event" from="MiddleTable" to="." method="_on_table_input_event" binds= ["middle"]]
[connection signal="mouse_entered" from="MiddleTable" to="." method="_on_table_mouse_entered"]
[connection signal="mouse_exited" from="MiddleTable" to="." method="_on_table_mouse_exited"]
[connection signal="input_event" from="RightTable" to="." method="_on_table_input_event" binds= ["right"]]
[connection signal="mouse_entered" from="RightTable" to="." method="_on_table_mouse_entered"]
[connection signal="mouse_exited" from="RightTable" to="." method="_on_table_mouse_exited"]
[connection signal="animation_finished" from="Clients/MiddleClient/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Clients/RightClient/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Clients/LeftClient/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Clients/MiddleClient"]
